# libredu

./: .gitignore  Cargo.toml  MoonZoon.toml  README.md  generate2.rs  schema.sql
asyncstd-redis/src/: connect.rs  connectionpool.rs  lib.rs  main.rs
backend/: Cargo.toml
backend/private/: build_id
backend/src/: api_middleware.rs  connection.rs  frontend.rs  main.rs  send_mail.rs  up_msg_handler.rs  user.rs
backend/src/connection/: admin.rs  forget_password.rs  register.rs  reset_password.rs  school.rs  sql.rs
backend/src/up_msg_handler/: admin.rs  auth.rs  classes.rs  lectures.rs  messages.rs  school.rs  teachers.rs  timetables.rs
client/ftl_messages/: en-US.ftl  tr-TR.ftl
client/src/: i18n.rs  lib.rs  model.rs  page.rs  route.rs
client/src/model/: activity.rs  city.rs  class.rs  class_room.rs  generate.rs  group.rs  library.rs  post.rs  school.rs  student.rs  subject.rs  teacher.rs  timetable.rs  user.rs
client/src/page/: admin.rs  home.rs  login.rs  reset.rs  school.rs  signin.rs  users.rs
client/src/page/admin/: home.rs  school_types.rs  subjects.rs
client/src/page/school/: add.rs  class_rooms.rs  detail.rs  students.rs  subjects.rs
client/src/page/school/group/: classes.rs  common_exam.rs  deneme_generate.rs  generate.rs  group.rs  home.rs  mod.rs  schedules.rs  teachers.rs  timetable.rs  (+1 more)
client/src/page/users/: change_password.rs  detail.rs  home.rs  schools.rs  timetables.rs
frontend/: Cargo.toml
frontend/languages/: en-US.ftl  tr-TR.ftl
frontend/src/: app.rs  connection.rs  elements.rs  header.rs  i18n.rs  main.rs  modals.rs  router.rs
frontend/src/app/: admin.rs  forget_password.rs  login.rs  messages.rs  reset_password.rs  school.rs  signin.rs  view.rs
frontend/src/app/admin/: messages.rs  msgs.rs  school.rs  timetables.rs
frontend/src/app/school/: add_school.rs  class.rs  classes.rs  homepage.rs  lectures.rs  teacher.rs  teachers.rs  timetables.rs
frontend/src/elements/: buttons.rs  text_inputs.rs
server/src/: api.rs  main.rs  middlewares.rs  model.rs  request.rs  routes.rs  views.rs
server/src/api/: users.rs  views.rs
server/src/api/admin/: views.rs
server/src/api/school/: class.rs  group.rs  mod.rs  school.rs  student.rs  teacher.rs
server/src/model/: activity.rs  city.rs  class.rs  class_room.rs  group.rs  library.rs  post.rs  school.rs  student.rs  subject.rs  teacher.rs  timetable.rs  user.rs
server/templates2/: robots.txt
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  msgs.rs  signin.rs
shared/src/models/: class.rs  lectures.rs  school.rs  teacher.rs  timetables.rs  users.rs
shared/src/msgs/: admin.rs  classes.rs  lectures.rs  messages.rs  schools.rs  teachers.rs  timetables.rs
(+13 files in other folders)
