[package]
name = "backend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
bcrypt = "0.13.0"
dotenvy = "0.15.6"
moon.workspace = true
shared = { path = "../shared", features = ["backend"] }
sqlx = {version = "0.6.2", features = ["postgres", "runtime-tokio-rustls","chrono"] }
redis = { version = "0.22.1", features = ["tokio-native-tls-comp"] }
lettre = {version = "0.10.4", features =["sendmail-transport", "tokio1", "tokio1-native-tls"]}


