[package]
name = "shared"
version.workspace = true
edition.workspace = true
publish.workspace = true
# resolver = "2"
[dependencies]
moonlight.workspace = true
validator = { version = "0.12", features = ["derive", "phone"] }

[features]
frontend = ["moonlight/frontend"]
backend = ["moonlight/backend"]
